test_programs/compile_failure/noirc_frontend_tests_unconditional_recursion_pass_3/src/main.nr

        fn main() -> pub u64 {
            let mut sum = 0;
            for _ in 0 .. 10 {
                sum += main();
            }
            sum
        }
        